--- a/gameOfLife.vcxproj
+++ b/gameOfLife.vcxproj
@@ -189,6 +189,7 @@
     <ClInclude Include="src\cell.h" />
     <ClInclude Include="src\gameManager.h" />
     <ClInclude Include="src\ofApp.h" />
+    <ClInclude Include="src\point.h" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="$(OF_ROOT)\libs\openFrameworksCompiled\project\vs\openframeworksLib.vcxproj">
