--- a/gameOfLife.vcxproj.filters
+++ b/gameOfLife.vcxproj.filters
@@ -29,6 +29,9 @@
     <ClInclude Include="src\cell.h">
       <Filter>src</Filter>
     </ClInclude>
+    <ClInclude Include="src\point.h">
+      <Filter>src</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="icon.rc" />
